restructure the definition of modules, versions, msg types, properties, etc.
This strives to especially clean up the messy terminology surrounding modules and
versions. Closes #24.

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -1,18 +1,19 @@
 <!-- draft -->
 # `vt6/core1.0` - Fundamental protocols and interface contracts
 
-This document specifies version `1.0` of the VT6 module `core`.
-Refer to this document using the identifier `vt6/core1.0` or its canonical URL <https://vt6.io/std/core/1.0/>.
+The canonical URL for this document is <https://vt6.io/std/core/1.0/>.
 
 **This is a non-normative draft.**
 
 The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED",  "MAY", and "OPTIONAL" in this document are to be interpreted as described in [RFC 2119](https://tools.ietf.org/html/rfc2119).
 
+This document uses augmented Backus-Naur form (ABNF) as defined in [RFC5234](https://tools.ietf.org/html/rfc5234).
+
 ## 1. Definitions and platform requirements
 
-The VT6 protocol is divided into **modules**.
-A process which implements VT6 modules and exposes them to other processes is called a **VT6 server**.
-A process that consumes this functionality is called a **VT6 client**.
+### 1.1. Servers and clients
+
+VT6 is a protocol which is spoken between **VT6 servers** and **VT6 clients**.
 A process that acts both as a VT6 client to at least one process and as a VT6 server to at least one process at the same time is called as **VT6 proxy**.
 
 *Rationale:* In the most common setup (programs being started by a shell inside a terminal emulator), the terminal emulator acts as the server.
@@ -21,6 +22,11 @@ The shell and the programs started by it are the clients.
 A **platform** is an operating environment which is admissible for VT6 clients and/or servers.
 
 A platform for VT6 servers SHALL define how a server can launch other processes which can then act as VT6 clients, or it alternatively SHALL define a method for the server to delegate this task to other processes.
+
+If the platform allows VT6 client processes to be started while a VT6 server is not present, the platform MUST define a method for client processes to determine whether a VT6 server is present.
+If no VT6 server is present, the client process SHALL not be considered a VT6 client for the purpose of this specification, and any other specifications that inherit the meaning of the term "VT6 client" from it.
+
+### 1.2. Server connections
 
 A **bidirectional text stream** is an object from which byte strings can be read and into which byte strings can be written.
 A VT6 client SHALL have access to a bidirectional text stream, which is called this client's **standard input/output**.
@@ -35,22 +41,139 @@ This does not necessarily mean that the server can identify which server connect
 *Rationale:* The server connection is separate from the standard input and output for scenarios where the VT6 client must be certain that the messages it sends are received by the VT6 server and not by another party (such as the next client in a shell pipe), and vice versa for server-to-client messages.
 In POSIX, the server connection replaces the [special capabilities of terminal devices](https://linux.die.net/man/3/termios).
 
-If the platform allows VT6 client processes to be started while a VT6 server is not present, the platform MUST define a method for client processes to determine whether a VT6 server is present.
-If no VT6 server is present, the client process SHALL not be considered a VT6 client for the purpose of this specification, and any other specifications that inherit the meaning of the term "VT6 client" from it.
-
 If a VT6 client has a method to obtain server connections, it is said to be operating in **normal mode**.
 Otherwise, it is said to be operating in **multiplexed mode**.
 
 *Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional text stream to their server and have no way of establishing a separate bidirectional text stream to use as a server connection.
 The most prominent example of this is a client connected via a remote login protocol such as [SSH](https://tools.ietf.org/html/rfc4251).
 
-### 1.1. Platforms
+### 1.2. Message types and properties
 
-A platform is defined by a **platform integration module**, which is a VT6 module (see section 3).
+A **message type** is a name for a kind of message (see section 2) that can be sent on a server connection, either from client to server or vice-versa.
+Each message type is defined by its name and a set of criteria describing when a message of that type is to be considered valid by the recipient.
+These criteria include at least:
 
-For each official module (see section 3.3) that references **platform-specific behavior**, the specification for each platform integration module MUST define said behavior for its platform, or it MUST define that the module referencing platform-specific behavior is not supported on its platform.
+- the directionality (whether the message may be sent from a client to a server, or vice-versa, or both),
+- the number of arguments that a message of this type may contain,
+- the format and/or structure of said arguments,
+- the behavior that is expected of the recipient party upon having received the message.
 
-A platform integration module MAY define message types and properties (see section 3) which are only available on the platform defined by it.
+A **property** is a quantifiable aspect which describes the server, or the server connection over which messages concerning this property are exchanged.
+Each concrete value of a property is represented as either a `<bytestring>` or a `<list>` (as defined in section 2).
+The value of a property may influence how the server reacts to a message from the client.
+It may also influence how the client reacts to a message from the server if (and only if) the client has subscribed to this property (see section 5.1).
+
+Each property is defined by its name and at least the following criteria:
+
+- the set of values that the property can have,
+- whether, and under which circumstances, the client may update the property's value (see section 5.3),
+- how the behavior of client and server is influenced by the value of this property.
+
+For each message type, there SHALL NOT be a property of the same name.
+
+*Rationale:* Even though technically possible, it would cause unnecessary confusion.
+
+### 1.3. Modules
+
+```abnf
+letter     = %x41-5A / %x61-7A                  ; letters A-Z and a-z
+identifier = ( letter / "_" ) *( letter / "-" / "_" )
+```
+
+The VT6 protocol is divided into **modules**.
+Each module has a name which is accepted by `<identifier>`.
+For example, this document concerns the module `core`.
+When it is not clear from the context that a given identifier refers to a module name, the prefix `vt6/` may be prepended to it.
+
+A module is considered **official** if its specifications are developed in the same location as this specification.
+The name of any unofficial module MUST start with a leading underscore and SHOULD indicate the organization that is responsible for its specification.
+
+A module is considered **private** if it is intended to be used by client and server implementations of a single vendor.
+The name of any private module SHOULD start with two leading underscores.
+
+*Rationale:* We strive to avoid name clashes between modules by different vendors, and reserve short module names for official modules to minimize message length for common messages.
+
+Modules partition the VT6 protocol into parts which each may or may not be supported by a given server or client.
+This includes, most prominently, message types and properties.
+
+```abnf
+scoped-identifier = identifier "." identifier
+message-type      = "want" / "have" / "nope" / scoped-identifier
+```
+
+Modules act as namespaces for message types and properties.
+Each message type or property name MUST be accepted by `<scoped-identifier>`, and the part before the dot MUST be equal to the name of the module defining it.
+As an exception, the module "core" is allowed to define the message types "want", "have" and "nope" which do not contain a module name (see sections 4 and 5).
+
+For example, the module `example` may define a message type named `example.foo` and a property named `example.bar`, but not a message type named `sample.foo` or a property named `sample.bar`.
+
+### 1.4. Module versions
+
+```abnf
+digit   = %x30-39 ; decimal digits 0-9
+nzdigit = %x31-39 ; non-zero decimal digits 1-9
+
+version-number = "0" / ( nzdigit *digit )
+
+major-version = version-number
+minor-version = version-number
+full-version  = major-version "." minor-version
+```
+
+Each module can have multiple **versions**.
+Each module version has a **major version number** and a **minor version number**, as accepted by the `<major-version>` and `<minor-version>` grammar elements defined above.
+When both version numbers are shown together, they are formatted as implied by the definition of the `<full-version>` grammar element defined above.
+
+When referring to a module version in specifications and other documents, the recommended way is to append the full version number to the module name including the `vt6/` prefix.
+For example, this document specifies version 1.0 of the module `core`, so the recommended identifier for this module version is `vt6/core1.0`.
+
+Each module specification MUST clearly indicate the module name and full version number, preferably by including the recommended module version identifier in the document title, like this document does.
+
+When the first specification of a module is created, its full version number MUST be set to `1.0`.
+Everytime a module specification is changed, the module version MUST be adjusted as follows:
+
+1. The minor version number is incremented.
+2. Then, if the specification has been changed in a backwards-incompatible way compared to the previous release (see section 1.5), the major version number is incremented and the minor version number is reset to 0.
+
+This requirement does not apply when the release is only a draft or pre-release that is not considered normative, and clearly labeled as such.
+
+**Rationale:** This follows the basic notion of [semantic versioning](http://semver.org/spec/v2.0.0.html), albeit massively simplified to suit the usecase of module specifications.
+
+Each module specification whose minor version number is bigger than 0 SHOULD indicate which parts of it have been added or changed compared to previous specifications of that module with the same major version number.
+
+**Rationale:** Implementors should not have to `diff` specification documents manually.
+
+### 1.5. Compatibility across module versions
+
+The following changes to a module specification are considered **backwards-compatible**:
+
+- addition of a new message type or property
+- deprecation (but not removal) of an existing message type or property
+- definition of previously undefined or underdefined behavior of an existing message type or property
+- copyediting
+
+Every other change to a module specification is considered **backwards-incompatible**, especially:
+
+- removal of a message type or property
+- change of behavior of an existing message type or property in such a way that there may exist programs that conform to the previous minor version of the specification, but not to the current one
+
+As an additional rule, all versions of the `core` module MUST be backwards-compatible with the parts of this specification that relate to all client and server behavior that takes place before a concrete version of the `core` module has been agreed to by the server (see section 3).
+This includes, specifically:
+
+- the parts of sections 1 and 2 that describe how client and server establish a connection to each other and use it to exchange messages, and
+- the syntax of `want`, `have` and `nope` messages as described in sections 2 and 4.
+  Those message types are therefore called **eternal**.
+
+The backwards-compatibility requirement across major versions of `core` does not apply to those parts of the message syntax that can only be used after the initial `want` and `have` messages (namely, nested lists).
+
+### 1.6. Platform integration modules
+
+Each platform is defined by a **platform integration module**, which is a VT6 module.
+
+For each official module that references **platform-specific behavior**, any module version of a platform integration module MUST define said behavior for its platform, or it MUST define that the module referencing platform-specific behavior is not supported on its platform.
+This does not apply for platform-specific behavior that is first described in module versions released after the module version in question of the platform integration module.
+
+A platform integration module MAY define message types and properties which are only available on the platform defined by it.
 
 *The remainder of this section is non-normative.*
 
@@ -60,20 +183,15 @@ The following platform integration modules are available at the time of publicat
 
 ## 2. Messages
 
-This section uses augmented Backus-Naur form (ABNF) as defined in [RFC5234](https://tools.ietf.org/html/rfc5234).
+### 2.1. Syntax
 
-### 2.1. Building blocks
-
-#### 2.1.1. Strings
+#### 2.1.1. Bytestrings
 
 ```abnf
+byte   = %x00-FF ; any single byte
+length = "0" | nzdigit *digit
+
 bytestring = length ":" *byte ","
-
-length = "0" / nzdigit *digit
-
-digit   = %x30-39 ; decimal digits 0-9
-nzdigit = %x31-39 ; non-zero decimal digits 1-9
-byte    = %x00-FF ; any single byte
 ```
 
 In the context of VT6 messages, a **bytestring** is a sequence of bytes which is:
@@ -91,7 +209,7 @@ The sequence of bytes between the first colon and the trailing comma is called t
 list = length "|" *( list / bytestring )
 ```
 
-A **list** is a sequence of elements which are either bytestrings or other lists, such that:
+In the context of VT6 messages, a **list** is a sequence of **elements** which are either bytestrings or other lists, such that:
 
 - it is accepted by `<list>`, and
 - the number of elements are the first pipe symbol is equal to the decimal value of the sequence of ASCII digits before the first pipe symbol.
@@ -138,12 +256,6 @@ alternative:  ("")
 ### 2.2. Message format
 
 ```abnf
-letter = %x41-5A / %x61-7A ; letters A-Z and a-z
-
-identifier        = ( letter / "_" ) *( letter / "-" / "_" )
-scoped-identifier = identifier "." identifier
-message-type      = "want" / "have" / "nope" / scoped-identifier
-
 message = "{" list "}"
 ```
 
@@ -151,10 +263,6 @@ A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonem
 The first element of a message is therefore called the message's **type**.
 Any following elements of a message are called the message's **arguments**.
 A message may have arbitrarily many arguments, including zero arguments.
-
-The message type consists of two **identifiers**, separated by a dot.
-The identifier before the dot is the name of the module (see section 3.1) defining that message type.
-As an exception, the message types "want", "have" and "nope" do not contain a module name (see sections 4 and 5).
 
 *Rationale:* The curly brackets that enclose messages serve as a sequence point where parsing can be resumed after a parsing error (see section 2.4).
 
@@ -202,9 +310,9 @@ A message is **invalid** if...
 
 - the length of the message exceeds the recipient's maximum message size (see sections 6.1 and 6.2), usually 1024 bytes, or
 
-- the message type is unknown or its use has not been agreed to by the server (see section 4).
+- the message type is unknown or its use has not been agreed to by the server (see section 3).
 
-Receipt of an invalid message MUST NOT cause any effect that can be observed by the sender, except for error responses that only occur for invalid messages (see section 5.1).
+Receipt of an invalid message MUST NOT cause any effect that can be observed by the sender, except for error responses that only occur for invalid messages (see section 4.1).
 
 If, while parsing a message stream, a recipient finds a message that cannot be parsed (either because of syntax errors or because the message exceeds the recipient's maximum message size), the recipient SHOULD employ the following algorithm to reset the stream parser and find the next well-formed message.
 
@@ -212,108 +320,7 @@ If, while parsing a message stream, a recipient finds a message that cannot be p
 2. Try to parse a message starting from this character.
 3. If no valid message could be read, go back to step 1.
 
-## 3. Modules
-
-The VT6 protocol specification is divided into **modules**, each of which MUST have a **name** which is accepted by `<module-name>` (see section 2.2).
-For example, this document specifies the `core` module.
-
-Each module contains the message types and properties defined in its specification (see below).
-Each message type MUST have a **name** which is accepted by `<message-type>` (see section 2.2).
-Each property MUST have a **name** which is accepted by `<scoped-name>` (see section 2.2).
-
-For each message type and property (except for the `want`, `have` and `nope` message types defined in sections 4 and 5), the part of its name before the dot MUST be equivalent to the name of the module whose specification defines it.
-For example, a module with a name of `example2` may define a message type named `example.foo` and a property named `example.bar`, but not a message type named `sample.foo` or a property named `sample.bar`.
-
-Each **message type** is defined by its name and a set of criteria describing when a message whose first element is the message type's name is to be considered valid by the recipient.
-These criteria include at least:
-
-- the directionality (whether the message may be sent from a client to a server, or vice-versa, or both),
-- the number of arguments that a message of this type may contain,
-- the format and/or structure of said arguments,
-- the behavior that is expected of the recipient party upon having received the message.
-
-A **property** is a quantifiable aspect which describes the server or the server connection over which messages concerning this property are exchanged.
-Each concrete value of a property is represented as either a `<bytestring>` or a `<list>`.
-The value of a property may influence how the server reacts to a message from the client.
-It may also influence how the client reacts to a message from the server if (and only if) the client has subscribed to this property (see section 6.1).
-
-Each property is defined by its name and at least the following criteria:
-
-- the set of values that the property can have,
-- whether, and under which circumstances, the client may set the property's value (see section 6.3),
-- how the behavior of client and server is influenced by the value of this property.
-
-For each message type in a module, that module SHALL NOT contain a property of the same name.
-
-*Rationale:* Even though technically possible, it would cause unnecessary confusion.
-
-### 3.1. Module versions
-
-```abnf
-version-number = "0" / ( nzdigit *digit )
-
-major-version = version-number
-minor-version = version-number
-full-version  = major-version "." minor-version
-```
-
-Each specification of a module has a **major version number** and a **minor version number**, as accepted by the `<major-version>` and `<minor-version>` grammar elements defined above.
-When both version numbers are shown together, they are formatted as implied by the definition of the `<full-version>` grammar element defined above.
-
-When the first specification of a module is created, its major and minor version number MUST be set to 1 and 0, respectively.
-A module specification MUST clearly indicate its major and minor version number.
-The recommended way to do so is by including the following sentence near the start of the specification:
-
-> This document specifies version `<full-version>` of the VT6 module `<module-name>`.
-> Refer to this document using the identifier `vt6/<module-name><full-version>` or its canonical URL `<stable-url-to-module-spec>`.
-
-Everytime a new release of the module specification is made, its version number MUST be adjusted as follows:
-
-1. The minor version number is incremented.
-2. If the module specification has been changed in a backwards-incompatible way compared to the previous release, the major version number is incremented and the minor version number is reset to 0.
-
-This requirement does not apply when the release is only a draft or pre-release that is not considered normative, and clearly labeled as such.
-
-**Rationale:** This follows the basic notion of [semantic versioning](http://semver.org/spec/v2.0.0.html), albeit massively simplified to suit the usecase of module specifications.
-
-Each module specification whose minor version number is bigger than 0 SHOULD indicate which parts of it have been added or changed compared to previous specifications of that module with the same major version number.
-
-**Rationale:** Implementors should not have to `diff` specification documents manually.
-
-### 3.2. Compatibility across versions
-
-The following changes to a module specification are considered **backwards-compatible**:
-
-- definition of a new message type or property
-- deprecation (but not removal) of an existing message type or property
-- definition of previously undefined or underdefined behavior of an existing message type or property
-- copyediting
-
-Every other change to a module specification is considered **backwards-incompatible**, especially:
-
-- removal of a message type or property
-- change of behavior of an existing message type or property in such a way that there may exist programs that conform to the previous minor version of the specification, but not to the current one
-
-As an additional rule, all versions of the `core` module MUST be backwards-compatible with the parts of this specification that relate to all client and server behavior that takes place before a concrete version of the `core` module has been agreed to by the server.
-This includes, specifically:
-
-- the parts of sections 1 and 2.3 that describe how client and server establish a connection to each other and use it to exchange messages, and
-- the syntax of `want`, `have` and `nope` messages as described in sections 2.1 and 4.
-  Those message types are therefore called **eternal**.
-
-The backwards-compatibility requirement across major versions of `core` does not apply to those parts of the message syntax that can only be used after the initial `want` and `have` messages (namely, nested lists).
-
-### 3.3. Module naming conventions
-
-A module is considered **official** if its specifications are developed in the same location as this specification.
-The name of any unofficial module MUST start with a leading underscore and SHOULD indicate the organization that is responsible for its specification.
-
-A module is considered **private** if it is intended to be used by client and server implementations of a single vendor.
-The name of any private module SHOULD start with two leading underscores.
-
-*Rationale:* We strive to avoid name clashes between modules by different vendors, and reserve short module names for official modules to minimize message length for common messages.
-
-### 3.4. Predefined property types
+### 2.5. Predefined property types
 
 When a property is said to **accept string values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value is a properly UTF-8-encoded string.
 
@@ -332,26 +339,23 @@ Analogously, when a property is said to **accept unsigned integer values**, this
 In both these cases, the numerical value of each such bytestring is that value which is returned when the `atoll()` function as defined in [the POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/functions/atoll.html) is applied to the value of the bytestring.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
-Section 7 of this specification uses the property types defined in this section.
+Section 6 of this specification uses the property types defined in this section.
 Other module specifications which use some or all of the property types defined in this section SHALL reference this section.
 The recommended way to do so is by including the following sentence near the start of the specification:
 
-> This document uses the predefined property types from section 3.4 of the `vt6/core1.0` specification.
+> This document uses the predefined property types from section 2.5 of `vt6/core1.0`.
 
-## 4. Protocol negotiation
+## 3. Protocol negotiation
 
 Before a client can use the message types and properties of a module, usage of the module must have been agreed to by the server.
 A server **agrees to** using a module by answering a `want` message from the client with a `have` message.
 
-### 4.1. The `want` message
+### 3.1. The `want` message
 
 - Directionality: client to server
 - Number of arguments: two or more
 
-Each argument MUST be a bareword.
-Quoted strings are not allowed in this message.
-
-*Rationale:* The syntax of the `want` message is deliberately minimized because of the compatibility requirements in section 3.2.
+Each argument MUST be a bytestring.
 
 A client can send a `want` message to the server to request usage of a module.
 The first argument MUST be the module name, and the remaining arguments SHALL be the major versions of that module that the client supports.
@@ -365,22 +369,19 @@ The first message that a client sends on each server connection MUST be a `want`
 
 *Rationale:* All other modules depend on the definitions in `core`, so it must be negotiated first.
 
-### 4.2. The `have` message
+### 3.2. The `have` message
 
 - Directionality: server to client
 - Number of arguments: zero or two
 
-Each argument MUST be a bareword.
-Quoted strings are not allowed in this message.
-
-*Rationale:* Same as in section 4.1.
+Each argument MUST be a bytestring.
 
 Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate if it agrees to using the requested module.
 If the `want` message is valid, but the server does not agree to the requested module, it MUST reply with a `have` message with zero arguments.
 
-If the server agrees to using the requested module, it MUST reply with a `have` message with two arguments: the module name and the full version of the specification supported by the server.
-Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in a specification of that module with the same major version number and the same, or a smaller, minor version number.
-The full version MUST be formatted according to the `<full-version>` grammar element defined above.
+If the server agrees to using the requested module, it MUST reply with a `have` message with two arguments: the module name and the module version supported by the server.
+Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in that module version, or one with the same module name, same major version number and a smaller minor version number.
+The module version MUST be formatted according to the `<full-version>` grammar element defined above.
 The major version contained therein MUST be one of the major versions that appeared in the original `want` message.
 
 The server MUST NOT agree to using a module if it does not support any of the major versions of that module which were offered in the `want` message.
@@ -416,9 +417,9 @@ The server is under no obligation of agreeing to any module.
 Clients should be prepared to gracefully handle unavailable modules.
 If the client finds that the server has not agreed to a module that the client needs, it must exit.
 
-## 5. Other eternal message types
+## 4. Other eternal message types
 
-### 5.1. The `nope` message
+### 4.1. The `nope` message
 
 - Directionality: any
 - Number of arguments: none
@@ -435,9 +436,9 @@ As an exception, the recipient SHALL NOT send a `nope` message when a module tha
 This module does not define any generic error reporting mechanisms beyond this message type.
 We consider it pointless to try to get any misbehaving process to start behaving correctly by pointing out their errors to them.
 
-## 6. Message types for `vt6/core1.0`
+## 5. Message types for `vt6/core1.0`
 
-### 6.1. The `core.sub` message
+### 5.1. The `core.sub` message
 
 - Directionality: client to server
 - Number of arguments: one
@@ -451,9 +452,9 @@ Clients which only want to get the value of a property once are free to ignore s
 
 A `core.sub` message is invalid (within the meaning of section 2.4) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
 
-When a server receives a valid `core.sub` message, it MUST subscribe the sending client to all properties in the message's argument list, and immediately notify the client with a corresponding `core.pub` message (see below).
+When a server receives a valid `core.sub` message, it MUST subscribe the sending client to the specified property, and immediately notify the client with a corresponding `core.pub` message (see below).
 
-### 6.2. The `core.pub` message
+### 5.2. The `core.pub` message
 
 - Directionality: server to client
 - Number of arguments: two
@@ -471,19 +472,19 @@ A `core.pub` message is invalid (within the meaning of section 2.4) if its first
 Moreover, a `core.pub` message is invalid if its second argument is not a valid value for the property in question according to the specification defining the property.
 
 A `core.pub` message can be sent by the server at any time to notify the client of changes to the values of properties that the client has subscribed to.
-Upon receiving a valid `core.sub` or `core.set` message, the server MUST reply immediately with a `core.pub` message for the same property^.
+Upon receiving a valid `core.sub` or `core.set` message, the server MUST reply immediately with a `core.pub` message for the same property.
 
-### 6.3. The `core.set` message
+### 5.3. The `core.set` message
 
 - Directionality: client to server
 - Number of arguments: two
 
-A client can send a `core.set` message to change the value of one or more properties.
+A client can send a `core.set` message to change the value of a property.
 The argument list of a `core.set` message has the same form as that of a `core.pub` message (a pair of property name and value).
 
 A `core.set` message is invalid (within the meaning of section 2.4) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
 
-The message is _not_ invalid if any of its even-numbered arguments is a value that is not permissible for the property in question.
+The message is _not_ invalid if the second argument is a value that is not permissible for the property in question.
 
 *Rationale:* For non-trivial properties, the client might not have enough information to decide whether a given value is valid.
 
@@ -511,9 +512,9 @@ The client SHOULD observe the `core.pub` reply to learn whether the requested ch
 *Rationale:* For example, consider the case of the client trying to set `core.client-msg-bytes-max` to `32768`.
 The server might reject this, and report the previous value in the `core.pub` response; or it might choose a value inbetween the previous and the requested value because it absolutely cannot process messages larger than that.
 
-## 7. Properties for `vt6/core1.0`
+## 6. Properties for `vt6/core1.0`
 
-### 7.1. The `core.server-msg-bytes-max` property
+### 6.1. The `core.server-msg-bytes-max` property
 
 - Acceptable values: unsigned integers
 - Can be set by client: yes
@@ -524,7 +525,7 @@ The default value of this property MUST NOT be larger than 1024.
 *Rationale:* The upper limit is important because clients are therefore assured that a 1 KiB buffer can hold any single message sent by the server, unless a different limit is negotiated.
 We choose this standard buffer size of 1 KiB such that most, if not all, messages that ever need to be sent fit into this buffer, without wasting too much memory on buffers.
 
-### 7.2. The `core.client-msg-bytes-max` property
+### 6.2. The `core.client-msg-bytes-max` property
 
 - Acceptable values: unsigned integers
 - Can be set by client: yes
@@ -533,6 +534,6 @@ The value of this property is the maximum length of a message sent from the clie
 The default value of this property MUST NOT be smaller than 1024.
 
 *Rationale:* The lower limit is important because clients are therefore assured that any messages smaller than 1 KiB will be accepted by any server, unless a different limit is negotiated.
-The rationale from section 7.1 applies respectively.
+The rationale from section 6.1 applies respectively.
 
 The client MUST observe the server response when setting this property, because the server may reject the new property value or choose a compromise value.
